@@ -1,8 +1,7 @@
 package com.webank.wedatasphere.exchangis.datasource.Utils;
 
+import org.apache.commons.codec.binary.Base64;
 import org.apache.linkis.common.conf.CommonVars;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 import javax.crypto.Cipher;
 import java.io.IOException;
@@ -29,21 +28,21 @@ public class RSAUtil {
     }
 
     //获取公钥(Base64编码)
-    public static String getPublicKey(KeyPair keyPair){
+    public static String getPublicKey(KeyPair keyPair) {
         PublicKey publicKey = keyPair.getPublic();
         byte[] bytes = publicKey.getEncoded();
         return byte2Base64(bytes);
     }
 
     //获取私钥(Base64编码)
-    public static String getPrivateKey(KeyPair keyPair){
+    public static String getPrivateKey(KeyPair keyPair) {
         PrivateKey privateKey = keyPair.getPrivate();
         byte[] bytes = privateKey.getEncoded();
         return byte2Base64(bytes);
     }
 
     //将Base64编码后的公钥转换成PublicKey对象
-    public static PublicKey string2PublicKey(String pubStr) throws Exception{
+    public static PublicKey string2PublicKey(String pubStr) throws Exception {
         byte[] keyBytes = base642Byte(pubStr);
         X509EncodedKeySpec keySpec = new X509EncodedKeySpec(keyBytes);
         KeyFactory keyFactory = KeyFactory.getInstance("RSA");
@@ -52,7 +51,7 @@ public class RSAUtil {
     }
 
     //将Base64编码后的私钥转换成PrivateKey对象
-    public static PrivateKey string2PrivateKey(String priStr) throws Exception{
+    public static PrivateKey string2PrivateKey(String priStr) throws Exception {
         byte[] keyBytes = base642Byte(priStr);
         PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyBytes);
         KeyFactory keyFactory = KeyFactory.getInstance("RSA");
@@ -61,7 +60,7 @@ public class RSAUtil {
     }
 
     //公钥加密
-    public static byte[] publicEncrypt(byte[] content, PublicKey publicKey) throws Exception{
+    public static byte[] publicEncrypt(byte[] content, PublicKey publicKey) throws Exception {
         Cipher cipher = Cipher.getInstance("RSA");
         cipher.init(Cipher.ENCRYPT_MODE, publicKey);
         byte[] bytes = cipher.doFinal(content);
@@ -69,7 +68,7 @@ public class RSAUtil {
     }
 
     //私钥解密
-    public static byte[] privateDecrypt(byte[] content, PrivateKey privateKey) throws Exception{
+    public static byte[] privateDecrypt(byte[] content, PrivateKey privateKey) throws Exception {
         Cipher cipher = Cipher.getInstance("RSA");
         cipher.init(Cipher.DECRYPT_MODE, privateKey);
         byte[] bytes = cipher.doFinal(content);
@@ -77,14 +76,16 @@ public class RSAUtil {
     }
 
     //字节数组转Base64编码
-    public static String byte2Base64(byte[] bytes){
-        BASE64Encoder encoder = new BASE64Encoder();
-        return encoder.encode(bytes);
+    public static String byte2Base64(byte[] bytes) {
+//        BASE64Encoder encoder = new BASE64Encoder();
+//        return encoder.encode(bytes);
+        return Base64.encodeBase64String(bytes);
     }
 
     //Base64编码转字节数组
     public static byte[] base642Byte(String base64Key) throws IOException {
-        BASE64Decoder decoder = new BASE64Decoder();
-        return decoder.decodeBuffer(base64Key);
+//        BASE64Decoder decoder = new BASE64Decoder();
+//        return decoder.decodeBuffer(base64Key);
+        return Base64.decodeBase64(base64Key);
     }
 }
